[gd_scene load_steps=15 format=2]

[ext_resource path="res://Graficos/frog-idle.png" type="Texture" id=1]
[ext_resource path="res://Graficos/frog-jump.png" type="Texture" id=2]
[ext_resource path="res://Personajes/Enemigos/Enemigo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Personajes/Enemigos/Sapo/Estados/Detenido.gd" type="Script" id=4]
[ext_resource path="res://Personajes/Enemigos/Sapo/Estados/Saltando.gd" type="Script" id=5]
[ext_resource path="res://Graficos/enemy-deadth.png" type="Texture" id=6]
[ext_resource path="res://Personajes/Enemigos/Sapo/Estados/Muerto.gd" type="Script" id=7]
[ext_resource path="res://Personajes/Enemigos/Sapo/StateMachine.gd" type="Script" id=8]
[ext_resource path="res://Personajes/Enemigos/Sapo/Enemigo.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.7227, 10.8888 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.8795, 10 )

[sub_resource type="Animation" id=3]
resource_name = "Detenido"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spr:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spr:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spr:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Muerto"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("spr:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spr:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spr:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Saltando"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("spr:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spr:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spr:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 2 ]
}

[node name="Sapo" instance=ExtResource( 3 )]
script = ExtResource( 9 )

[node name="col" parent="." index="0"]
position = Vector2( -1.58112, 0 )
shape = SubResource( 1 )

[node name="spr" parent="." index="1"]
texture = ExtResource( 2 )
hframes = 3

[node name="StateMachine" parent="." index="2"]
script = ExtResource( 8 )

[node name="Detenido" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 4 )

[node name="Saltando" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 5 )

[node name="Muerto" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 7 )

[node name="col" parent="Detectar" index="0"]
position = Vector2( -1.76292, -0.110184 )
shape = SubResource( 2 )

[node name="anim" type="AnimationPlayer" parent="." index="4"]
anims/Detenido = SubResource( 3 )
anims/Muerto = SubResource( 4 )
anims/Saltando = SubResource( 5 )

[node name="nuevo_salto" type="Timer" parent="." index="5"]
wait_time = 4.0
one_shot = true

[node name="left" type="RayCast2D" parent="." index="6"]
position = Vector2( -18.3031, 0 )
rotation = 1.5708
enabled = true

[node name="right" type="RayCast2D" parent="." index="7"]
position = Vector2( 15.2465, 0.416862 )
rotation = -1.5708
enabled = true
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="timeout" from="nuevo_salto" to="StateMachine/Detenido" method="_on_nuevo_salto_timeout"]
